# quick-settings

./: .gitignore  README.md  meson.build
.github/workflows/: gettext.yml  main.yml  merge.yml
data/: Indicator.css  meson.build  quick-settings.gresource.xml  quick-settings.gschema.xml  quick-settings.metainfo.xml
debian/: changelog  control  copyright
po/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  (+167 more)
po/extra/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  (+167 more)
protocol/: meson.build  pantheon-desktop-shell-v1.xml  pantheon-desktop-shell.vapi
src/: DisplayWidget.vala  Indicator.vala  MainWidget.vala  PopoverWidget.vala  meson.build
src/DBus/: AccountsService.vala  Bluez.vala  BluezAdapter.vala  BluezDevice.vala  DbusInterfaces.vala  EndSessionDialogServer.vala  GeoclueManager.vala  LockInterface.vala  Login1Manager.vala  PantheonAccountsServicePlugin.vala  PowerProfiles.vala  SeatInterface.vala  SensorProxy.vala  SessionInterface.vala  SystemInterface.vala  UPower.vala  UserInterface.vala
src/Services/: UserManager.vala
src/Sound/: MediaControls.vala  VolumeControls.vala
src/Views/: A11yView.vala
src/Widgets/: AvatarButton.vala  BluetoothToggle.vala  CurrentUser.vala  CurrentUserButton.vala  DarkModeToggle.vala  EndSessionDialog.vala  PowerModeToggle.vala  PreventSleepToggle.vala  RotationToggle.vala  SessionBox.vala  SettingsToggle.vala  TattleBox.vala  TextScale.vala  UserList.vala  UserRow.vala
